# sigop

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/config/: release_changelog.json
.github/workflows/: cd.yml  ci.yml
src/: main.rs  optimizer.rs  preprocessor.rs
