[package]
name = "sigop"
version = "0.1.0"
authors = ["Luca Georges François <luca@quartz.technology>"]
description = "A A tool to optimize your Solidity function signatures."
repository = "https://github.com/quartz-technology/sigop"
license-file = "LICENSE"
keywords = ["solidity", "function-signature", "optimizer"]
categories = ["command-line-utilities", "development-tools"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
rayon = "1.5.3"
sha3 = "0.10.5"
error-stack = "0.2.1"
regex = "1.6.0"
log = "0.4.17"
env_logger = "0.9.0"
clap = { version = "4.1.7", features = ["derive"] }
indicatif = "0.17.1"
